2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Fixed.

2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* Makefile.am: Fixed make dist.

	* src/gui/addressbook.cpp:
	Simplified menu.

2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* src/clients/stun.cpp src/clients/stun.h 
	src/endpoints/accountshandler.cpp src/endpoints/manager.cpp 
	src/endpoints/manager.h src/gui/druid.cpp 
	src/gui/preferences.cpp:
	Various STUN optimizations.

2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp src/endpoints/sip.h:
	Added temporary workaround for SER that sometimes sends dups.

2006-01-14  Damien Sandras  <dsandras@gnome.org>

	src/endpoints/manager.cpp:
	Do not update the state during calls for now.

2006-01-14  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/esplash.c:
	s/GnomeMeeting/Ekiga/ thanks to Fabrice Alphonso.

	* src/clients/avahi.cpp src/clients/avahi.h 
	src/endpoints/manager.cpp:
	Use the same kind of API than elsewhere.
	
2006-01-14  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: Made sure PACKAGE_NAME is
	defined.

2006-01-14  Julien Puydt  <jpuydt@free.fr>

	* src/components/dbus.cpp, src/components/dbus-helper.cpp,
	src/components/dbus-helper-stub.xml, src/components/dbus_stub.xml:
	Applied a patch from Damien Ciabrini to make the renaming more
	complete.

2006-01-14  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-ldap.cpp:
	Applied patch from Elaine Xian <elaine.xiang _AT____ sun.com> to improve
	search filter. Thanks!

2006-01-14  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-eds.cpp 
	lib/gmcontacts/gmcontacts-gmconf.cpp 
	lib/gmcontacts/gmcontacts-ldap.cpp 
	lib/gmcontacts/gmcontacts-local.h 
	lib/gmcontacts/gmcontacts-remote.cpp 
	lib/gmcontacts/gmcontacts-remote.h 
	lib/gmcontacts/gmcontacts.cpp lib/gmcontacts/gmcontacts.h 
	src/clients/avahi.cpp src/endpoints/manager.cpp 
	src/gui/addressbook.cpp: