@@ -1,3 +1,7 @@
+2006-01-16  Julien Puydt  <jpuydt@free.fr>
+
+	* src/Makefile.am: Fixed "make dist".
+
 2006-01-15  Damien Sandras  <dsandras@gnome.org>
 
 	* po/POTFILES.in: Fixed.
